Correct main logo in dark mode

--- a/components/Navigation/Header.module.scss
+++ b/components/Navigation/Header.module.scss
@@ -28,6 +28,7 @@
       padding: 0.5rem 1rem;
       border-radius: 1rem;
       cursor: pointer;
+      box-shadow: 0 0 5px $color-pry;
     }
 
     svg {
